--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,8 @@ header {
     border-width: 0px 0px 3px 0px;
     font-size: 30px;
     background-color: #ffffff;
+    position: relative;
+    bottom: 60px;
 }
 .topbar {
     
@@ -34,9 +36,11 @@ header {
     color: #ffffff;
     padding: 20px 0px 0px 20px;
     font-size: 30px;
-    position: relative;
     left: 270px;
+    position: relative;
+    top: 30px;
     font-weight: bold;
+    
 
 
 }
@@ -47,6 +51,8 @@ header {
 
     font-size: 20px;
     margin-left: 730px;
+    position: relative;
+    top: 30px;
 
 
 }
@@ -55,6 +61,8 @@ header {
     color: #cccccc;
     padding: 20px 0px 0px 0px;
     font-size: 20px;
+    position: relative;
+    top: 30px;
 
 }
 #top4 {
@@ -63,6 +71,8 @@ header {
     padding: 20px 0px 0px 0px;
 
     font-size: 20px;
+    position: relative;
+    top: 30px;
 
 }
 
@@ -78,6 +88,42 @@ header {
     overflow: auto;
     
 }
+#input {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    background-color: #ffffff;
+    width: 960px;
+    margin-left: 300px;
+    border-style: solid;
+    border-color: #dddddd;
+    border-width: 3px;
+    color: #cccccc;
+    overflow: auto;
+    
+}
+.forms {
+    margin-left: 20px;
+    padding: 40px 0px 40px 0px;
+    
+}
+.textbox {
+    width: 92%;
+    height: 20px;
+}
+#message{
+    height: 150px;
+}
+.button {
+    background-color: teal;
+    border: none;
+    color: #ffffff;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
 .bodyhead {
     width: 92%;
     color: teal;
@@ -94,6 +140,11 @@ header {
     left: 20px;
     
 }
+.dachshund {
+    width: 40%;
+    float: left;
+    padding: 5%;
+}
 .profpic {
     width: 300px;
     padding: 20px;
@@ -106,16 +157,24 @@ header {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     float: left;
 }
+.wrapper {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
 footer {
     background-color: #666666;
     width: 100%;
     text-align: center;
-    position: absolute;
-  bottom: 0;
+    
   width: 100%;
   height: 40px; 
   padding-top: 20px;
   border-top: 8px solid #4aaaa5;
   color: #ffffff;
-    
+  flex-shrink: 0;
+}
+#abbot {
+    position: absolute;
+  bottom: 0;
 }
